# Aura

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  default.yml
shaders/: full_screen.vert  show_texture.frag
src/: main.rs  video.rs  vulkan.rs
src/video/: converter.rs  video_clock.rs  video_context.rs
src/vulkan/: debug.rs  decoder.rs  decoders.rs  photon.rs  pipeline.rs  sampler.rs  shaders.rs  swapchain.rs  vk_init.rs  wsi.rs
src/vulkan/decoders/: decoder.rs  h264.rs  h264_parser.rs
src/vulkan/photon/: decoder.rs  decoders.rs  h264.rs  h264_parser.rs  lib.rs  sampler.rs  types.rs
src/vulkan/photon/decoders/: h264.rs  h264_parser.rs
src/vulkan/wsi/: wsi.rs
